--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,7 +13,7 @@
   body, #root {
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background: linear-gradient(45deg, #e0ff8b, #5dfb5a, #5f9c22, #f98c3f, #6b8cf9, #84117e);
     background-size: 600% 600%;
