--- a/src/css/index.css
+++ b/src/css/index.css
@@ -15,7 +15,7 @@
     padding: 0;
     height: 100vh;
     width: 100%;
-    background: linear-gradient(45deg, #e0ff8b, #5dfb5a, #5f9c22, #f98c3f, #6b8cf9, #84117e);
+    background: linear-gradient(45deg, #0F2027, #203A43, #2C5364, #872B7C, #B43997, #803174);
     background-size: 600% 600%;
     animation: gradientBackground 10s ease infinite;
   }
